Add styles for clear button

--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
         </svg>
       </button>
 
-	  <button id="clearBtn">Clear</button>
-	  <button id="deleteBtn">Delete Selected</button>
+	  <button id="clearBtn" class="small" title="Clear">🗑️</button>
+	  <button id="deleteBtn" style="display:none">Delete Selected</button>
 	</div>
 
     <header>
