--- a/index.html
+++ b/index.html
@@ -25,12 +25,26 @@
     padding:8px;
     background:#f4f4f4;
     box-sizing:border-box;
+	justify-content: space-between;
   }
   
   #toolbar > * { font-size:14px; }
   
+  .left-tools {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+  }
+
+  .right-tools {
+    margin-left: auto;         /* pushes to the right */
+    display: flex;
+    gap: 10px;
+    align-items: center;
+  }
+
   canvas {
-	display:block;
+    display:block;
 	width:100vw;
 	height:calc(100vh - var(--toolbar-h));
 	background:#fff; cursor:crosshair;
@@ -184,23 +198,29 @@
   <!-- Slide-in Panel for Shape Properties -->
   <div id="panel" aria-hidden="true">
 	
-	<!-- first panel -->
 	<div id="toolbar">
-	  <label>Shape:
-		<select id="shapeType">
-		  <option value="circle">Circle</option>
-		  <option value="rectangle">Rectangle</option>
-		</select>
-	  </label>
+	
+	  <!-- Left side -->
+	  <div class="left-tools">
+		<label>Shape:
+		  <select id="shapeType">
+			<option value="circle">Circle</option>
+			<option value="rectangle">Rectangle</option>
+		  </select>
+		</label>
+	  </div>
 
-	  <button id="toggleGridBtn" class="icon-btn" title="Toggle Grid">
-        <svg viewBox="0 0 24 24" width="20" height="20">
-          <path d="M3 3h4v4H3V3zm7 0h4v4h-4V3zm7 0h4v4h-4V3zM3 10h4v4H3v-4zm7 0h4v4h-4v-4zm7 0h4v4h-4v-4zM3 17h4v4H3v-4zm7 0h4v4h-4v-4zm7 0h4v4h-4v-4z"/>
-        </svg>
-      </button>
+	  <!-- Right side -->
+	  <div class="right-tools">
+		<button id="toggleGridBtn" class="icon-btn" title="Toggle Grid">
+		  <svg viewBox="0 0 24 24" width="20" height="20">
+			<path d="M3 3h4v4H3V3zm7 0h4v4h-4V3zm7 0h4v4h-4V3zM3 10h4v4H3v-4zm7 0h4v4h-4v-4zm7 0h4v4h-4v-4zM3 17h4v4H3v-4zm7 0h4v4h-4v-4zm7 0h4v4h-4v-4z"/>
+		  </svg>
+		</button>
 
-	  <button id="clearBtn" class="small" title="Clear">🗑️</button>
-	  <button id="deleteBtn" style="display:none">Delete Selected</button>
+		<button id="clearBtn" class="small" title="Clear">🗑️</button>
+		<button id="deleteBtn" style="display:none">Delete Selected</button>
+	  </div>
 	</div>
 
     <header>
